global.css
/* ... */
/* Horrible Hack: default alignment is somehow worg ??? */
.xmformulevb .mathjax-inline {
    vertical-align: -0.5em;
}


.xmprev{
    padding-block: 0rem;
    padding-left: 1.8em;
    padding-right: 0.2em;
    color: black;
}

.xmnext {
    padding-block: 0rem;
    padding-left: 0.2em;
    padding-right: 1.8em;
    color: black;
}


.activity-title a {
    color: white;
    text-decoration: none;
}

/* tooltip next/previous */
.xmhidden {
    display: none;
    position: absolute;
    color: white;
    background-color:  #383f47;
    border: 2px solid;
    border-radius: 3px;
    padding: 5px;
}

/* Voor source Bart Lambregs */
.xmsource{
	max-width: 30em;
	margin-left: auto;
	color:gray;
	font-size: smaller;
	margin-bottom: 1em
}

figcaption {
	display: block;
	text-align: center;
	margin-bottom:  1em;
	font-size: smaller;
}

/* geen section numbers */
h4 span.titlemark {
    display: none;
}

iframe.xmyoutube {
    width: 80%;
}

.minipage {
	display: inline-block;
    vertical-align: top;
}

